# fer

./: Cargo.toml  README.md
benches/: bench_alpha.rs  bench_compare_l.rs  bench_compare_l16.rs  bench_compare_la.rs  bench_compare_la16.rs  bench_compare_rgb.rs  bench_compare_rgb16.rs  bench_compare_rgba.rs  bench_compare_rgba16.rs  bench_resize.rs
benches/utils/: resize_functions.rs
src/: image.rs  image_view.rs  lib.rs  mul_div.rs  pixels.rs  resizer.rs
src/alpha/: mod.rs
src/convolution/: mod.rs
src/convolution/u8x2/: avx2.rs
